# cuVert-Q

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/gpufastq/: codec_bsc.hpp  codec_gpu.cuh  codec_gpu_nvcomp.cuh  compression_workflow.hpp  decompression_workflow.hpp  fastq_parser.hpp  fastq_record.hpp  gpu_compressor.hpp  serializer.hpp
src/: ablation.cpp  ablation_zstd.cpp  codec_bsc.cpp  codec_gpu.cu  codec_gpu_nvcomp.cu  compression_workflow.cpp  decompression_workflow.cpp  fastq_parser.cpp  gpu_compressor.cu  main.cpp  serializer.cpp
